Criacao de componentes de criacao, edicao e visualizacao de usuarios e enderecos

--- a/provaFullStackAngular/src/app/components/home/home.component.html
+++ b/provaFullStackAngular/src/app/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<section>
+  <div class="informacoes">
+    <h1>Ola, Seja Bem-Vind(a)o, {{this.nome}}</h1>
+    <p>Esse e o portal de cadastro de Usuarios e Enderecos, que faz parte do desario Full Stack Tokio.</p>
+
+    <br />
+
+    <h3>Kevin Alec Neri Lazzarotto</h3>
+
+    <br />
+
+    <p>Canais de Comunicação:</p>
+    <p><strong>E-mail:</strong> {{'neri.kevin96@gmail.com'}}</p>
+    <p><strong>GitHub:</strong> {{'https://github.com/Clamant96'}}</p>
+    <p><strong>YouTube:</strong> {{'https://www.youtube.com/@helpconnect4653'}}</p>
+  </div>
+</section>
