Criacao de lartas

--- a/provaFullStackAngular/src/app/components/cadastrar/cadastrar.component.html
+++ b/provaFullStackAngular/src/app/components/cadastrar/cadastrar.component.html
@@ -1,3 +1,5 @@
+<app-alerta></app-alerta>
+
 <section>
   <div class="blocos">
     <div class="bloco" style="background-position: center; background-size: 150%; background-image: url(img/background/background_01.png);">
