--- a/provaFullStackAngular/src/app/components/util/header/header.component.html
+++ b/provaFullStackAngular/src/app/components/util/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="menu">
-    @if(this.role) {
+    @if(this.validaRole(this.role)) {
       <div class="botao" routerLink="/lista/usuarios" >
         <span>Usuarios</span>
       </div>
